--- a/static/scss/sinEditor.scss
+++ b/static/scss/sinEditor.scss
@@ -1,6 +1,28 @@
 .sin-editor {
 	@import "component.scss";
 	position: relative;
+	.sin-editor-wrapper{
+		display: flex;
+		width: 100%;
+		flex-direction: column;
+		&+.file-list{
+			padding: 5px 20px;
+			font-size: 12px;
+			color: #999;
+			text-align: right;
+			&.empty{
+				padding: 0 !important;
+			}
+			.removed{
+				text-decoration: line-through;
+			}
+		}
+	}
+	&.comment-input{
+		.sin-editor-wrapper{
+			flex-direction: row;
+		}
+	}
 	.sin-editor-default,
 	.sin-editor-inline,
 	.sin-editor-default-edit{
@@ -39,18 +61,6 @@
 		border-top: 1px solid #f1f1f5;
 		text-align: right;
 		padding: 6px 15px;
-		&+.file-list{
-			padding: 5px 20px;
-			font-size: 12px;
-			color: #999;
-			text-align: right;
-			&.empty{
-				padding: 0 !important;
-			}
-			.removed{
-				text-decoration: line-through;
-			}
-		}
 	}
 	.sin-editor-default + .sin-editor-footer,
 	.sin-editor-inline +  .sin-editor-footer,
